--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,6 @@ pydantic-settings = "^2.2.1"
 
 # Seguridad
 passlib = "^1.7.4"
-bcrypt = "^4.1.2"
 
 # Conectores a BD (podés usar uno u otro)
 mysql-connector-python = "^8.4.0" # MySQL
@@ -38,6 +37,7 @@ ptvsd = "^4.3.2"
 aiomysql = "^0.2.0"
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-json-logger = "^3.3.0"
+bcrypt = "4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
