--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,17 @@ aiomysql = "^0.2.0"
 python-jose = {extras = ["cryptography"], version = "^3.4.0"}
 python-json-logger = "^3.3.0"
 bcrypt = "4.0.1"
+requests = "^2.32.3"
+pyyaml = "^6.0.2"
+httpx = "^0.28.1"
+pytest = "^8.3.5"
+faker = "^37.3.0"
+pytest-asyncio = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.4.2"
 isort = "^5.13.2"
 pytest = "^8.2.1"
-httpx = "^0.27.0"
 pytest-cov = "^5.0.0"
 
 [build-system]
