--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,9 @@ black = "^24.4.2"
 isort = "^5.13.2"
 pytest = "^8.2.1"
 pytest-cov = "^5.0.0"
+pytest-mock = "^3.15.1"
+httpx = "^0.28.1"
+pytest-asyncio = "^1.3.0"
 
 [build-system]
 requires = ["poetry-core"]
