--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ pytest-cov = "^5.0.0"
 pytest-mock = "^3.15.1"
 httpx = "^0.28.1"
 pytest-asyncio = "^1.3.0"
+aiosqlite = "^0.22.1"
 
 [build-system]
 requires = ["poetry-core"]
