feat(REQ-002): Implement debtor list and stabilization fixes

--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -6,6 +6,15 @@
       "vite/client"
     ],
     "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@modules/*": [
+        "./src/modules/*"
+      ],
+      "@auth/*": [
+        "./src/modules/Auth/*"
+      ],
       "@domain/*": [
         "./src/domain/*"
       ],
